# JumSparse

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/jumsparse/: array.hpp
include/jumsparse/formats/: cm_csr.hpp  coo.hpp  csc.cuh  csr.hpp
include/jumsparse/ops/: spmm.cuh  spmv.cuh
include/jumsparse/solvers/: gauss_seidel.cuh  jacobi.cuh  krylov.cuh  multigrid.cuh  over_relaxation.cuh
include/jumsparse/utils/: reordering.cuh
src/: CMakeLists.txt
src/formats/: cm_csr.cu  coo.cu  csc.cu  csr.cpp
src/ops/: spmm.cu  spmv.cu
src/solvers/: gauss_seidel.cu  jacobi.cu  krylov.cu  multigrid.cu  over_relaxation.cu
src/utils/: reordering.cu
test/: CMakeLists.txt
test/formats/: test_cm_csr.cu  test_coo.cu  test_csc.cu  test_csr.cu
test/ops/: test_spmm.cu  test_spmv.cu
test/solvers/: test_gauss_seidel.cu  test_jacobi.cu  test_krylov.cu
test/utils/: test_array.cpp  test_reordering.cu
